Bug fixes in safari

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="MY-DESK">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="shortcut icon" href="icon.ico" type="image/x-icon">
     <link rel="manifest" href="manifest.json" />
     <link rel="shortcut icon" href="/public/icon.ico"/>
     <link rel="apple-touch-icon" href="/public/icon.ico"/>
